--- a/client/src/pages/Pools/index.css
+++ b/client/src/pages/Pools/index.css
@@ -43,7 +43,7 @@ ul > li {
 .pool-title-color {
     color: rgb(65, 173, 206);
 }
-.stack-amount {
+.stake-amount {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
